addressed wrap issue

--- a/src/assets/css/matters.css
+++ b/src/assets/css/matters.css
@@ -38,6 +38,10 @@ input:focus, textarea { outline: none !important; }
   padding-bottom: 0px;
 }
 
+.content {
+  clear: both;
+}
+
 .search { 
   margin-top: 10px;
   float: left;
